ArrayList and tests

--- a/LinkedList/LinkedList.Test/LinkedList.Test.csproj
+++ b/LinkedList/LinkedList.Test/LinkedList.Test.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ArrayList\ArrayList.csproj" />
     <ProjectReference Include="..\LinkedList\LinkedList.csproj" />
   </ItemGroup>
 
