binary tree and print test

--- a/LinkedList/LinkedList.Test/LinkedList.Test.csproj
+++ b/LinkedList/LinkedList.Test/LinkedList.Test.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ArrayList\ArrayList.csproj" />
+    <ProjectReference Include="..\BinaryTree\BinaryTree.csproj" />
     <ProjectReference Include="..\LinkedList\LinkedList.csproj" />
   </ItemGroup>
 
